fix(magazine): Min height and awkward gap

--- a/app/magazine/style.css
+++ b/app/magazine/style.css
@@ -11,10 +11,6 @@ nav {
   position: fixed !important;
 }
 
-section {
-  height: calc(100svh - 6rem);
-}
-
 body > * {
   scroll-snap-align: end;
 }
